# cabal-workflow-runner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  cabal_workflow_runner.opam  dune-project
.github/workflows/: ci.yml  release.yml
examples/: bounty.workflow.json  run-demo.workflow.json  smoke.workflow.json
lib/: backend.ml  backend.mli  compiler.ml  dune  engine.ml  engine.mli  expr.ml  expr.mli  ledger.ml  ledger.mli  lint.ml  lint.mli  types.ml  types.mli  validate.ml  validate.mli  workflow_json.ml  workflow_json.mli  workflow_schema.ml  workflow_schema.mli
schema/: workflow.schema.json
scripts/: parity_check.py
test/: dune  test_cwr.ml
test/snapshots/: bounty.workflow.js  run-demo.workflow.js  smoke.workflow.js
